k8s/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slotify-green
  namespace: slotify
spec:
  replicas: 3
  selector:
    matchLabels:
      app: slotify
      version: green
  template:
    metadata:
      labels:
        app: slotify
        version: green
    spec:
      containers:
        - name: app
          image: your-dockerhub/slotify:v2
          ports:
            - containerPort: 3000
